k8s/expense-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-service
spec:
  selector:
    app: expense-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
