k8s/report-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  selector:
    app: report-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
