k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: expense-tracker.local
      http:
        paths:
          - path: /api/expenses
            pathType: Prefix
            backend:
              service:
                name: expense-service
                port:
                  number: 80
          - path: /api/reports
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 81
